--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <h1 class="result"></h1>
+    <ol class="result"></ol>
+    <div class="result"> </div>
 
 
     <script type="text/javascript" src="./js/script.js"></script>
